--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./jquery.range.js"></script>
     <script src = "./model.js"></script>
+    <script src = "./mediator.js"></script>
+    <script src="./mvc.js"></script>
 </body>
 </html>
