--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <script src="./jquery.range.js"></script>
     <script src = "./model.js"></script>
     <script src = "./mediator.js"></script>
-    <script src="./mvc.js"></script>
+    <!-- <script src="./mvc.js"></script> -->
 </body>
 </html>
