refactor: mvc layout

--- a/index.html
+++ b/index.html
@@ -6,27 +6,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class = 'body'>
-    <!-- <div class="range__wrapper">
-        <div class="range__textbox">
+    <div class="range__wrapper">
+        <!-- <div class="range__textbox">
             <h3> range </h3>
             <div class="range__result-text"></div>
-        </div>
-        <div class="range__slider range-1">
-            <div class="range__slider-range"></div>
-            <button class="range__slider-handle range__btn-1"></button>
-            <button class="range__slider-handle range-btn-2"></button>
-        </div>
-    </div> -->
-    <!-- <div id='id66' class="range">
-        <div id='id66b' class='range__between' style='width:100px;'></div>
-          <button id='id661' class="range__button_1" style='margin-left:0px;'></button>
-          <button id='id662' class="range__button_2" style='margin-left:100px;'></button>
-      </div> -->
+        </div> -->
+    </div>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./jquery.range.js"></script>
     <script src="./slider.js"></script>
-    <!-- <script src = "./model.js"></script> -->
-    <script src = "./mediator.js"></script>
-    <!-- <script src="./mvc.js"></script> -->
 </body>
 </html>
