--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class = 'body'>
-    <div class="range__wrapper">
-        <!-- <div class="range__textbox">
-            <h3> range </h3>
-            <div class="range__result-text"></div>
-        </div> -->
+    <div id = "range-1" class="range__wrapper">
+
+    </div>
+    <div id = "range-2" class="range__wrapper">
+
     </div>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./jquery.range.js"></script>
