feat: add vertical slider methods

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class = 'body'>
-    <div id = "range-1" class="range__wrapper">
-
+    <div class = "range__hor-wrapper">
+        <div id = "range-1" class="range__wrapper"></div>
+        <div id = "range-2" class="range__wrapper"></div>
     </div>
-    <div id = "range-2" class="range__wrapper">
-
+    <div class = "range__vert-wrapper">
+        <div id = "range-3" class="range__wrapper range__wrapper-vertical"></div>
+        <div id = "range-4" class="range__wrapper range__wrapper-vertical"></div>
     </div>
+
+
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./jquery.range.js"></script>
     <script src="./slider.js"></script>
