--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./jquery.range.js"></script>
     <!-- <script src="./slider.js"></script> -->
-    <script src='./dist/model.js'></script>
+    <script src='./model.js'></script>
 </body>
 </html>
