--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
 
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./jquery.range.js"></script>
+    <script src="./jquery.range.js" type="module" ></script>
     <!-- <script src="./slider.js"></script> -->
-    <script src='./model.js'></script>
+    <!-- <script src='./test/test.js' type="module"></script> -->
+    <script src='./model.js' type="module"></script>
+    <!-- <script src='./test/test.js' type="module"></script> -->
 </body>
 </html>
